<resources>
    <string name="app_name">ContributorsList</string>
    <string name="loading_contributors">Loading contributors …</string>
    <string name="contributors_list">Contributors List</string>
    <string name="languages">Company: %s</string>
    <string name="location">Location: %s</string>
    <string name="twitter_username">Twitter: %s</string>
    <string name="followers">followers: %s</string>
    <string name="following">following: %s</string>
    <string name="created_at">created at: %s</string>
    <string name="updated_at">updated at: %s</string>
    <string name="description_contributors">contributors</string>
    <string name="description_name">name</string>
    <string name="description_bio">bio</string>
    <string name="description_company">company</string>
    <string name="description_location">location</string>
    <string name="description_twitter">twitter</string>
    <string name="description_followers">followers</string>
    <string name="description_following">following</string>
    <string name="description_created_at">created at</string>
    <string name="description_updated_at">updated at</string>
    <string name="loading_user">Loading User …</string>
</resources>
