<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="isLoading" type="boolean" />
        <variable name="userViewModel" type="com.dmb.contributorslist.viewModel.UserViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loading_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_user"
            android:textAlignment="center"
            app:visibleGone="@{isLoading}"/>

        <LinearLayout
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            app:visibleGone="@{!isLoading}">

<!--            <ImageView-->
<!--                android:id="@+id/imageView"-->
<!--                android:layout_width="@dimen/logo_width"-->
<!--                android:layout_height="@dimen/logo_height"-->
<!--                android:src="@drawable/github"-->
<!--                android:contentDescription="@null" />-->

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_name"
                android:textStyle="bold"
                android:textSize="@dimen/header1"
                android:text="@{userViewModel.user.name}"
                android:textAlignment="center"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_bio"
                android:textSize="@dimen/header2"
                android:text="@{userViewModel.user.bio}"/>

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_company"
                android:textSize="@dimen/text"
                android:text="@{String.format(@string/languages, userViewModel.user.company)}"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_location"
                android:textSize="@dimen/text"
                android:text="@{String.format(@string/location, userViewModel.user.location)}"/>

            <TextView
                android:id="@+id/twitter_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_twitter"
                android:textSize="@dimen/text"
                android:text="@{String.format(@string/twitter_username, userViewModel.user.twitter_username)}"/>

            <TextView
                android:id="@+id/followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_followers"
                android:textSize="@dimen/text"
                android:text="@{String.format(@string/followers, userViewModel.user.followers)}"/>

            <TextView
                android:id="@+id/following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_following"
                android:textSize="@dimen/text"
                android:text="@{String.format(@string/following, userViewModel.user.following)}"/>

            <TextView
                android:id="@+id/created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_created_at"
                android:textSize="@dimen/text"
                android:text="@{String.format(@string/created_at, userViewModel.user.created_at)}"/>

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_updated_at"
                android:textSize="@dimen/text"
                android:text="@{String.format(@string/updated_at, userViewModel.user.updated_at)}"/>

        </LinearLayout>

    </FrameLayout>
</layout>